# hamlog

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: config.py  database.py  main.py  models.py  schemas.py
backend/auth/: users.py
backend/routers/: hamqth.py  parse.py  qso.py
frontend/: index.html  vite.config.js
frontend/src/: App.jsx  api.js  auth.js
frontend/src/components/: NavBar.jsx  ProtectedRoute.jsx  QSOForm.jsx
frontend/src/pages/: LogList.jsx  Login.jsx  NewQSO.jsx  Register.jsx
frontend/src/styles/: global.css
tests/: conftest.py  test_auth.py  test_callsign.py  test_parse.py  test_qso.py
