[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hamlog"
version = "0.1.0"
description = "AI-Powered Ham Radio Logbook & Contact Analyzer"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "fastapi-users[sqlalchemy]>=13.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "slowapi>=0.1.9",
    "python-dotenv>=1.0.0",
    "alembic>=1.13.0",
    "httpx>=0.27.0",
    "anthropic>=0.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
